<resources>
    <string name="app_name">Handy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="message_advertiser">Message advertiser</string>
    <string name="posted_by">Posted by: %1$s</string>
    <string name="no_results">No results</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Incorrect email or password, please try again."</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="reg_a_handy_account">Create a handyman account</string>
    <string name="trades">Trade</string>
    <string name="header_title">It\'s free to join Handy!</string>
    <string name="header_subtitle">Sign in to contact a Handyman</string>
    <string name="create_a_new_advertisement">Create a new Advertisement</string>
    <string name="message_user">Message User</string>
    <string name="write_review">Write a review</string>
    <string name="rate_me">Rate me!</string>
    <string name="submit_button">Submit Rating</string>
    <string name="delete_ad">Delete Advertisement</string>
    <string name="review_banner">reviews !</string>
    <string name="no_messages">No messages found</string>
    <string name="sign_in_to_message_advertiser">Sign in to message advertiser</string>
    <string name="sing_in_to_message">Sign in to message</string>
    <string name="sign_in_to_rate">Sign in to rate</string>
    <string name="hourly_rate">"Hourly Rate: %1$s kr."</string>
    <string name="av_rating">"Av. Rating: %1$s"</string>
    <string name="give_user_a_review">"Give %1$s a review!"</string>
    <string name="advertisement_image">Advertisement image</string>
    <string name="location">Location</string>
    <string name="date_posted">date posted</string>
    <string name="post_a_new_advertisement">Post a new Advertisement</string>
    <string name="ad_title">Ad title</string>
    <string name="trade_needed">Trade needed:</string>
    <string name="description">Description</string>
    <string name="add_an_image_to_your_ad">Add an image to your ad</string>
    <string name="post">Post</string>
    <string name="post_a_portfolio_item">Post a Portfolio Item</string>
    <string name="portfolio_item_title">Portfolio item title</string>
    <string name="add_an_image_to_your_portfolio">Add an image to your portfolio</string>
    <string name="portfolio">Portfolio</string>
    <string name="reviews">Reviews</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign Up</string>
    <string name="handy">Handy</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_user">Register User</string>
    <string name="write_a_review">Write a review</string>
    <string name="submit">Submit</string>
    <string name="write_a_constructive_comment">Write a constructive comment</string>
    <string name="current_average_rating">Current average rating</string>
    <string name="my_profile">My Profile</string>
    <string name="name_colon">Name:</string>
    <string name="rate">Rate</string>
    <string name="hourly_rate_colon">Hourly rate:</string>
    <string name="about_me">About me:</string>
    <string name="trade_colon">Trade:</string>
    <string name="email_colon">Email:</string>
    <string name="save">Save</string>
    <string name="add_to_portfolo">Add to portfolo</string>
    <string name="reviews_written">Reviews written</string>
    <string name="my_active_ads">My active ads</string>
    <string name="my_messages">My Messages</string>
    <string name="about_me_colon">About me:</string>
    <string name="delete_account">Delete account</string>
    <string name="open_messages">open messages</string>
    <string name="user_icon">User Icon</string>

</resources>